Crash when trying to access screen areas through the outliner #61780

Closed
opened 2019-02-21 08:10:50 +01:00 by Vyacheslav Kobozev · 6 comments

Broken: 2.8

If I turn filter on, even hidden addons will be filtered
090201.jpg

Also, when I am trying to reach workspace settings through data API, Blender crashes.
2019-02-21_10-09-26.mp4

Broken: 2.8 If I turn filter on, even hidden addons will be filtered ![090201.jpg](https://archive.blender.org/developer/F6676995/090201.jpg) Also, when I am trying to reach workspace settings through data API, Blender crashes. [2019-02-21_10-09-26.mp4](https://archive.blender.org/developer/F6677034/2019-02-21_10-09-26.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-02-21 16:40:18 +01:00

Please only report one issue per report. The first issue has already been reported though so not need to report it again https://developer.blender.org/T58842

I can reproduce the second crash.
Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
rna_Area_ui_type_get (ptr=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_screen.c:259
259		if (sa->type->space_subtype_item_extend != NULL) {
(gdb) bt
- 0  rna_Area_ui_type_get (ptr=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_screen.c:259
- 1  Area_ui_type_get (ptr=<optimized out>) at /home/zed/programmering/blender_master/blender/build/source/blender/makesrna/intern/rna_screen_gen.c:561
#2  0x0000555556a187e1 in RNA_property_enum_get (ptr=ptr@entry=0x7fffcda8adb8, prop=<optimized out>, prop@entry=0x555558e18a40 <rna_Area_ui_type>)
    at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:3403
#3  0x00005555562bcf4b in ui_def_but_rna (block=block@entry=0x7fffcf452c08, type=type@entry=2048, retval=retval@entry=0, str=str@entry=0x0, x=x@entry=300,
    y=y@entry=-722, width=150, height=19, ptr=0x7fffcda8adb8, prop=0x555558e18a40 <rna_Area_ui_type>, index=-1, min=min@entry=0, max=max@entry=0,
    a1=a1@entry=-1, a2=a2@entry=-1, tip=0x0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface.c:3655
#4  0x00005555562bd1d3 in uiDefButR_prop (block=block@entry=0x7fffcf452c08, type=type@entry=2048, retval=retval@entry=0, str=str@entry=0x0, x=x@entry=300,
    y=y@entry=-722, width=150, height=19, ptr=0x7fffcda8adb8, prop=0x555558e18a40 <rna_Area_ui_type>, index=-1, min=min@entry=0, max=max@entry=0,
    a1=a1@entry=-1, a2=a2@entry=-1, tip=0x0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface.c:4005
#5  0x0000555556306386 in uiDefAutoButR (block=block@entry=0x7fffcf452c08, ptr=ptr@entry=0x7fffcda8adb8, prop=0x555558e18a40 <rna_Area_ui_type>,
    index=index@entry=-1, name=0x0, icon=0, x1=300, y1=-722, x2=150, y2=19)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_utils.c:107
#6  0x00005555561a9788 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988,
    sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:870
#7  0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988,
    sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892
#8  0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988,
    sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892
#9  0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988,
    sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892
#10 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988,
    sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892
#11 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=300,
    lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892
#12 0x00005555561ad1ec in draw_outliner (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:2298
#13 0x00005555561a5de7 in outliner_main_region_draw (C=0x7fffea058188, ar=0x7fffe3c64148)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/space_outliner.c:96
#14 0x00005555564241b9 in ED_region_do_draw (C=C@entry=0x7fffea058188, ar=ar@entry=0x7fffe3c64148)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:508
#15 0x000055555610bdd5 in wm_draw_window_offscreen (stereo=false, win=0x7fffe4f7ef08, C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:573
- 16 wm_draw_window (win=0x7fffe4f7ef08, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:705
- 17 wm_draw_update (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:859
- 18 0x0000555556109f10 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:424
- 19 0x00005555560f4a83 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Please only report one issue per report. The first issue has already been reported though so not need to report it again https://developer.blender.org/T58842 I can reproduce the second crash. Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. rna_Area_ui_type_get (ptr=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_screen.c:259 259 if (sa->type->space_subtype_item_extend != NULL) { (gdb) bt - 0 rna_Area_ui_type_get (ptr=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_screen.c:259 - 1 Area_ui_type_get (ptr=<optimized out>) at /home/zed/programmering/blender_master/blender/build/source/blender/makesrna/intern/rna_screen_gen.c:561 #2 0x0000555556a187e1 in RNA_property_enum_get (ptr=ptr@entry=0x7fffcda8adb8, prop=<optimized out>, prop@entry=0x555558e18a40 <rna_Area_ui_type>) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:3403 #3 0x00005555562bcf4b in ui_def_but_rna (block=block@entry=0x7fffcf452c08, type=type@entry=2048, retval=retval@entry=0, str=str@entry=0x0, x=x@entry=300, y=y@entry=-722, width=150, height=19, ptr=0x7fffcda8adb8, prop=0x555558e18a40 <rna_Area_ui_type>, index=-1, min=min@entry=0, max=max@entry=0, a1=a1@entry=-1, a2=a2@entry=-1, tip=0x0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface.c:3655 #4 0x00005555562bd1d3 in uiDefButR_prop (block=block@entry=0x7fffcf452c08, type=type@entry=2048, retval=retval@entry=0, str=str@entry=0x0, x=x@entry=300, y=y@entry=-722, width=150, height=19, ptr=0x7fffcda8adb8, prop=0x555558e18a40 <rna_Area_ui_type>, index=-1, min=min@entry=0, max=max@entry=0, a1=a1@entry=-1, a2=a2@entry=-1, tip=0x0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface.c:4005 #5 0x0000555556306386 in uiDefAutoButR (block=block@entry=0x7fffcf452c08, ptr=ptr@entry=0x7fffcda8adb8, prop=0x555558e18a40 <rna_Area_ui_type>, index=index@entry=-1, name=0x0, icon=0, x1=300, y1=-722, x2=150, y2=19) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_utils.c:107 #6 0x00005555561a9788 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:870 #7 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892 #8 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892 #9 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892 #10 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=sizex@entry=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892 #11 0x00005555561a96c4 in outliner_draw_rnabuts (block=block@entry=0x7fffcf452c08, ar=ar@entry=0x7fffe3c64148, soops=soops@entry=0x7fffe4f7f988, sizex=300, lb=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:892 #12 0x00005555561ad1ec in draw_outliner (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/outliner_draw.c:2298 #13 0x00005555561a5de7 in outliner_main_region_draw (C=0x7fffea058188, ar=0x7fffe3c64148) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_outliner/space_outliner.c:96 #14 0x00005555564241b9 in ED_region_do_draw (C=C@entry=0x7fffea058188, ar=ar@entry=0x7fffe3c64148) at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:508 #15 0x000055555610bdd5 in wm_draw_window_offscreen (stereo=false, win=0x7fffe4f7ef08, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:573 - 16 wm_draw_window (win=0x7fffe4f7ef08, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:705 - 17 wm_draw_update (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:859 - 18 0x0000555556109f10 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:424 - 19 0x00005555560f4a83 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```
Sebastian Parborg changed title from Import-export addons not in filter-list and permanently filtered to Crash when trying to access screen areas through the outliner 2019-02-21 16:42:14 +01:00

Thanks, Sebastian!

Thanks, Sebastian!

This issue was referenced by 8b10e1b457

This issue was referenced by 8b10e1b45798b39fd63adef65f2eae0c7fbadbac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61780
No description provided.